--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <header>
                 <h3>Post #1</h3>
             </header>
-            <p>Lorem ipsum dolor sit amet consectetur <a href="https://github.com/cmlins">adipisicing elit</a>. Consectetur eius nam non voluptatem minima soluta, sequi, minus quae, ea laborum excepturi dolores asperiores quidem voluptatibus quaerat. Beatae sequi voluptatibus quod.</p>
+            <p>Lorem ipsum dolor sit amet consectetur <a href="https://github.com/cmlins" target="blank">adipisicing elit</a>. Consectetur eius nam non voluptatem minima soluta, sequi, minus quae, ea laborum excepturi dolores asperiores quidem voluptatibus quaerat. Beatae sequi voluptatibus quod.</p>
         </article>
     </section>
     <footer>Feito por Cinthya Lins</footer>
