--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
     <header>
+        <img src="img\cinthya (1).jpg" alt="Foto Cinthya Lins">
         <h1>Cinthya Lins</h1>
     </header>
     <section>
@@ -15,10 +16,23 @@
         <article>
             <header>
                 <h3>Post #1</h3>
+                <img src="img\GettyImages_2019-02-20_big_data,_AI,_robots (1).jpg" alt="foto ai_robots">
             </header>
-            <p>Lorem ipsum dolor sit amet consectetur <a href="https://github.com/cmlins" target="blank">adipisicing elit</a>. Consectetur eius nam non voluptatem minima soluta, sequi, minus quae, ea laborum excepturi dolores asperiores quidem voluptatibus quaerat. Beatae sequi voluptatibus quod.</p>
+            <p>Lorem ipsum dolor sit amet consectetur <a href="https://github.com/cmlins" target="blank">adipisicing elit</a>. Consectetur eius nam non <a href="mailto:cinthyalins@gmail.com">voluptatem minima</a>  soluta, sequi, minus quae, ea laborum excepturi dolores asperiores quidem voluptatibus quaerat. Beatae sequi voluptatibus quod.</p>
         </article>
     </section>
-    <footer>Feito por Cinthya Lins</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="mailto:cinthyalins@gmail.com">cinthyalins@gmail.com</a>
+            </li>
+            <li>
+                <a href="https://linkedin.com/in/cinthyalins" target="_blank">LinkedIn</a>
+            </li>
+            <li>
+                <a href="https://github.com/cmlins" target="_blank">Github</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 </html>
