--- a/curso bootstrap/index.html
+++ b/curso bootstrap/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>My page</title>
+        <title>Cinthya Lins</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css"  href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css"  href="css/style.css">
@@ -18,7 +18,7 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#quemsomos">Quem somos</a>
+                        <a class="nav-link" href="#quemsomos">Quem sou</a>
                     </li>
                     <li class="nav-item active">
                         <a class="nav-link" href="#parceiros">Parceiros</a>
@@ -82,6 +82,17 @@
 
         <footer class="container-fluid text-center bg-footer margin">
             <p>Desenvolvido por <b>Cinthya Lins</b></p>
+            <ul class="contacts_list">
+                <li>
+                    <a href="mailto:cinthyalins@gmail.com">cinthyalins@gmail.com</a>
+                </li>
+                <li>
+                    <a href="https://linkedin.com/in/cinthyalins" target="_blank">LinkedIn</a>
+                </li>
+                <li>
+                    <a href="https://github.com/cmlins" target="_blank">Github</a>
+                </li>
+            </ul>
         </footer>
 
     </body>
